adicionando produtos e notas fiscais